--- a/sass/woocommerce-custom.scss
+++ b/sass/woocommerce-custom.scss
@@ -227,7 +227,9 @@ span.posted_in {
     border: 1px solid $secondaryColour !important;
     border-radius: 0 !important;
 }
-
+.tagged_as { 
+	display:none; // hide tags
+}
 
 // tabs
 .woocommerce div.product .woocommerce-tabs ul.tabs {
@@ -276,6 +278,16 @@ span.posted_in {
 input#coupon_code {
     width: 200px !important;
 }
+
+// pagination 
+.woocommerce nav.woocommerce-pagination ul {
+	border-color:$secondaryColour;
+}
+.woocommerce nav.woocommerce-pagination ul li span.current {
+	background-color:$secondaryColour;
+	color:$secondaryColourText;
+}
+
 
 /* Small Devices, Desktops - col-sm-x  */
 @media only screen and (max-width : 600px) {
